--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   line-height: 1;
   background: #fff;
   color: #444;
-  font: 18px/18px "calluna-1", "calluna-2", Georgia, "Times New Roman", serif;
+  font: 18px/18px "Palatino Linotype", Palatino, "URW Palladio L" serif;
 }
 
 ol, ul {
