--- a/views/index.erb
+++ b/views/index.erb
@@ -10,8 +10,9 @@
 
 	<p class="important">I'm seeking a software engineering internship for the summer of 2011 with a company that's pushing the limits of technology.</p>
 
-	<p>I am currently <em>unavailable</em> for freelance work, but you should feel free to contact me anyway if you are interested in my services.</p>
-	
+	<p>You can find my code on <a href="https://github.com/cleercode">GitHub</a>, design on <a href="http://dribbble.com/Cleer">Dribbble</a>, and work info on <a href="http://linkedin.com/in/cleer">LinkedIn</a>.</p>
+
+	<!-- <p>I am currently <em>unavailable</em> for freelance work, but you should feel free to contact me anyway if you are interested in my services.</p> -->
 	
 	<p>Need to contact me? Shoot an email to <strong>cleer <span class="sec">{at}</span> cmu <span class="sec">{dot}</span> edu</strong>.</p>
 	
