Line height adjustment

--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@ body {
   line-height: 1;
   background: #fff;
   color: #444;
-  font: 18px/18px "Palatino Linotype", Palatino, "URW Palladio L" serif;
+  font: 18px/1.5 "Palatino Linotype", Palatino, "URW Palladio L" serif;
 }
 
 ol, ul {
