Adding Rails to resume

--- a/views/resume.erb
+++ b/views/resume.erb
@@ -55,6 +55,7 @@
 			<li>JavaScript</li>
 			<li>jQuery</li>
 			<li>MooTools</li>
+			<li>Ruby on Rails</li>
 			<li>Sinatra</li>
 			<li>PHP</li>
 			<li>MySQL</li>
