Added Grapevin info

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,8 @@
 		I believe that great products are both beautiful and functional. <br />
 		So I work as both an engineer and a designer. <br />
 
+  <p>Recently, I built <a href="http://grapev.in" class="visit">Grapevin</a>, a web application for sharing playlists.</p>
+
 	<p class="important">I'm seeking a software engineering internship for the summer of 2011 with a company that's pushing the limits of technology.</p>
 
 	<p>You can find my code on <a href="https://github.com/cleercode">GitHub</a>, design on <a href="http://dribbble.com/Cleer">Dribbble</a>, and work info on <a href="http://linkedin.com/in/cleer">LinkedIn</a>.</p>
