--- a/views/resume.erb
+++ b/views/resume.erb
@@ -24,13 +24,13 @@
 	</ul>
 	<h3>Projects</h3>
 	<ul class="spaced">
+  	<li>
+  		<strong>Grapevin</strong> <span class="sec"><a href="http://grapevine.chrsl.net">grapev.in</a></span><br/>
+  		A web application that allows users to create and share a playlist of their favorite songs. Built in Ruby on Rails.
+  	</li>
 		<li>
 			<strong>Kittygram</strong> <span class="sec"><a href="http://kittygram.heroku.com">kittygram.heroku.com</a></span><br/>
 			A web application that displays cat photos from Twitter users around the world. Built in Ruby and Sinatra.
-		</li>
-		<li>
-			<strong>Grapevine</strong> <span class="sec"><a href="http://grapevine.chrsl.net">grapevine.chrsl.net</a></span><br/>
-			A music discovery web application for Yahoo!'s Hack U competition. Built in jQuery.
 		</li>
 		<li>
 			<strong>Chess Bot</strong><br/>
@@ -42,29 +42,29 @@
 	<h3>Skills</h3>
 		<h4>Programming</h4>
 		<ul>
+  		<li>Ruby</li>
 			<li>Java</li>
 			<li>C</li>
-			<li>Ruby</li>
 			<li>Objective-C</li>
 			<li>Perl</li>
 		</ul>
 		<h4>Web</h4>
 		<ul>
-			<li>HTML</li>
-			<li>CSS</li>
+  		<li>Ruby on Rails</li>
 			<li>JavaScript</li>
 			<li>jQuery</li>
 			<li>MooTools</li>
-			<li>Ruby on Rails</li>
 			<li>Sinatra</li>
 			<li>PHP</li>
 			<li>MySQL</li>
+			<li>HTML</li>
+			<li>CSS</li>
 		</ul>
 		<h4>Applications</h4>
 		<ul>
-			<li>Eclipse</li>
+  		<li>Git</li>
 			<li>Subversion</li>
-			<li>Git</li>
+			<li>Eclipse</li>
 			<li>Photoshop</li>
 			<li>Illustrator</li>
 		</ul>
