--- a/views/work.erb
+++ b/views/work.erb
@@ -7,6 +7,27 @@
 </div>
 <div class="item">
 	<div class="description">
+		<h3>Grapevin</h3>
+		<p>During December 2010, I built Grapevin while teaching myself Ruby on Rails. The application allows users to sign in with their existing Facebook or Twitter accounts and create their an <a href="http://grapev.in/chris">interactive playlist of their favorite songs</a> to share with their friends.</p>
+		<p>Besides learning a new web development framework, much of the challenge was creating a cohesive user experience. I continue to maintain and improve Grapevin.
+		
+		<h4>Technologies</h4>
+		<ul>
+			<li>Ruby on Rails</li>
+			<li>jQuery</li>
+			<li>last.fm API</li>
+			<li>Grooveshark API</li>
+			<li>HTML</li>
+			<li>CSS</li>
+		</ul>
+		
+		<h4>Visit</h4>
+		<a href="http://grapev.in" class="visit">grapev.in</a>
+	</div>
+	<img src="work/grapevin.png" alt="Grapevin" />
+</div>
+<div class="item">
+	<div class="description">
 		<h3>Stik.com</h3>
 		<p>Over summer 2010, I worked as a front-end development and user interface intern at Stik.com, a young San Francisco-based startup that uses the Facebook network to help connect users with professionals whom their friends know.</p> 
 		<p>I completely overhauled the design of the site and implemented major functionality such as user profile pages.</p>
@@ -38,9 +59,6 @@
 		<ul>
 			<li>Photoshop</li>
 		</ul>
-		
-		<h4>Visit</h4>
-		<a href="http://easylegalbilling.com" class="visit">easylegalbilling.com</a>
 	</div>
 	<img src="work/easylegalbilling.png" alt="Easy Legal Billing" />
 </div>
@@ -64,7 +82,7 @@
 <div class="item">
 	<div class="description">
 		<h3>Grapevine</h3>
-		<p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/">Hack U</a> competition, I developed a music recommendation web application in less than a full day.</p>
+		<p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/">Hack U</a> competition, I developed a music recommendation web application in less than a full day. The success of this project inspired my later endeavor, the similarly-named <a href="http://grapev.in">Grapevin</a>.</p>
 		
 		<h4>Technologies</h4>
 		<ul>
