Renamed Grapevine to Symphony

--- a/views/work.erb
+++ b/views/work.erb
@@ -53,7 +53,7 @@
 <div class="item">
 	<div class="description">
 		<h3>Easy Legal Billing</h3>
-		<p>I redesigned appearance of a web-based billing application.</p>
+		<p>I redesigned the landing page of a web-based billing application.</p>
 		
 		<h4>Technologies</h4>
 		<ul>
@@ -81,8 +81,8 @@
 </div>
 <div class="item">
 	<div class="description">
-		<h3>Grapevine</h3>
-		<p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/">Hack U</a> competition, I developed a music recommendation web application in less than a full day. The success of this project inspired my later endeavor, the similarly-named <a href="http://grapev.in">Grapevin</a>.</p>
+		<h3>Symphony</h3>
+		<p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/">Hack U</a> competition, I developed a music recommendation web application in less than a full day.
 		
 		<h4>Technologies</h4>
 		<ul>
@@ -93,7 +93,7 @@
 		</ul>
 		
 		<h4>Visit</h4>
-		<a href="http://grapevine.chrsl.net" class="visit">grapevine.chrsl.net</a>
+		<a href="http://symphony.chrsl.net" class="visit">symphony.chrsl.net</a>
 	</div>
-	<img src="work/grapevine.png" alt="Grapevine" />
+	<img src="work/symphony.png" alt="Symphony" />
 </div>
