New course schedule

--- a/views/coursework.erb
+++ b/views/coursework.erb
@@ -47,4 +47,4 @@
 	
 	<p>Partially responsible for my fascination with things like web applications, UI, machine learning, and Ruby. Also partially responsible for my constant desire to work on personal software projects. <a href="http://cmurpg.com" target="_blank">Check it out here.</a></p>
 </div>
-<p>View my academic schedules: <a href="https://scheduleman.org/schedules/4mJx2YLAiG">F09</a> | <a href="https://scheduleman.org/schedules/1ocxKKreeH">S10</a> | <a href="https://scheduleman.org/schedules/wFuYMAozwC">F11</a></p>
+<p>View my academic schedules: <a href="https://scheduleman.org/schedules/4mJx2YLAiG">F09</a> | <a href="https://scheduleman.org/schedules/1ocxKKreeH">S10</a> | <a href="https://scheduleman.org/schedules/wFuYMAozwC">F10</a> | <a href="https://scheduleman.org/schedules/Gwm18BXpFW">S11</a></p>
