--- a/views/index.erb
+++ b/views/index.erb
@@ -1,25 +1,76 @@
-<img src="photo.jpg" alt="Chris Lee" id="photo">
-<h2>Hi. My name's Chris.</h2>
-<div id="intro">
-	<p>I'm a <a href="http://www.cs.cmu.edu/" target="_blank">computer science</a> student at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>. <br />
-		I like making things. <br />
-		Things that will make people's lives happier. <br />
-		Things like software and web applications. <br />
-		I believe that great products are both beautiful and functional. <br />
-		So I work as both an engineer and a designer. <br />
+<div class="item">
+  <div class="description">
+    <h3>Grapevin <a href="http://grapev.in" title="Grapevin">&rarr;</a></h3>
+    <p>Grapevin's my current project to allow people to express themselves through the music they enjoy. It allows users to easily create an <a href="http://grapev.in/chris">interactive playlist of their favorite songs</a> to share with their friends.</p>
 
-  <p>Recently, I built <a href="http://grapev.in" class="visit">Grapevin</a>, a web application for sharing playlists.</p>
-
-	<p class="important">I'm seeking a software engineering internship for the summer of 2011 with a company that's pushing the limits of technology.</p>
-
-	<p>You can find my code on <a href="https://github.com/cleercode">GitHub</a>, design on <a href="http://dribbble.com/Cleer">Dribbble</a>, and work info on <a href="http://linkedin.com/in/cleer">LinkedIn</a>.</p>
-
-	<!-- <p>I am currently <em>unavailable</em> for freelance work, but you should feel free to contact me anyway if you are interested in my services.</p> -->
-	
-	<p>Need to contact me? Shoot an email to <strong>cleer <span class="sec">{at}</span> cmu <span class="sec">{dot}</span> edu</strong>.</p>
-	
+    <h4>Technologies</h4>
+    <ul>
+      <li>Ruby on Rails</li>
+      <li>jQuery</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+  </div>
+  <img src="work/grapevin.png" alt="Grapevin" />
 </div>
-<blockquote>
-	What hackers and painters have in common is that they're both makers. Along with composers, architects, and writers, what hackers and painters are trying to do is make good things.
-	<span id="quote-credit">Paul Graham</span>
-</blockquote>
+<div class="item">
+  <div class="description">
+    <h3>Stik.com <a href="http://stik.com" title="Stik.com">&rarr;</a></h3>
+    <p>Over summer 2010, I interned at Stik.com, a tiny San Francisco startup using the Facebook network to facilitate business connections.</p>
+    <p>Leveraging my experience in both design and development, I completely overhauled the design of the site and implemented major functionality.</p>
+
+    <h4>Technologies</h4>
+    <ul>
+      <li>PHP</li>
+      <li>MySQL</li>
+      <li>jQuery</li>
+      <li>MooTools</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Photoshop</li>
+      <li>Illustrator</li>
+    </ul>
+  </div>
+  <img src="work/stik.png" alt="Stik" />
+</div>
+<div class="item">
+  <div class="description">
+    <h3>Easy Legal Billing</h3>
+    <p>The creators of this online billing application sought me out for a visual refresh of their landing page.</p>
+
+    <h4>Technologies</h4>
+    <ul>
+      <li>Photoshop</li>
+    </ul>
+  </div>
+  <img src="work/easylegalbilling.png" alt="Easy Legal Billing" />
+</div>
+<div class="item">
+  <div class="description">
+    <h3>Fire Emblem: <br/>Immortal Sword <a href="http://bwdyeti.com/fe7x" title="Fire Emblem: Immortal Sword">&rarr;</a></h3>
+    <p>I designed and coded the website for a fan-made spinoff of a popular video game series.</p>
+
+    <h4>Technologies</h4>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Photoshop</li>
+      <li>Illustrator</li>
+    </ul>
+  </div>
+  <img src="work/fe7x.png" alt="Fire Emblem: Immortal Sword" />
+</div>
+<div class="item">
+  <div class="description">
+    <h3>Symphony <a href="http://symphony.chrsl.net" title="Symphony">&rarr;</a></h3>
+    <p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/">Hack U</a> competition, I developed this music recommendation web application in less than a full day. The simple grid of recommendations displays a lot of information consisely and attractively.
+
+    <h4>Technologies</h4>
+    <ul>
+      <li>jQuery</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+  </div>
+  <img src="work/symphony.png" alt="Symphony" />
+</div>
