--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h4 {
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 5px;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  background: #fafafa;
+  background: #fff;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   font-size: 14px;
