Different Cambria-based font stack.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 
 body {
   color: #444;
-  font: 16px/1.5 Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif; 
+  font: 16px/1.5 Cambria, "Palatino Linotype", "Book Antiqua", "URW Palladio L", serif;
   margin: 0 auto;
   padding: 30px 0;
   width: 900px;
