--- a/style.css
+++ b/style.css
@@ -141,12 +141,12 @@ h4 {
 
 .item {
   -moz-border-radius: 5px;
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15);
   -webkit-border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15);
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15);
   font-size: 14px;
   margin-bottom: 40px;
   overflow: hidden;
