Simplify page title variable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>{{ page.title }}</title>
+    <title>Chris Lee{% if page.title %} | {{ page.title }}{% endif %}</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold,italic|Roboto:regular,bold" rel="stylesheet" type="text/css" />
     <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
