Mobile meta viewport tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Chris Lee{% if page.title %} | {{ page.title }}{% endif %}</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold,italic|Roboto:regular,bold" rel="stylesheet" type="text/css" />
     <link href="/style.css" rel="stylesheet" type="text/css" />
