--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I've previously worked at <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> as a <a href="http://blog.mozilla.org/ux/" target="_blank">user experience designer</a>, <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer, and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
+          <p>I've previously worked at <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> as a <a href="http://blog.mozilla.org/ux/" target="_blank">user experience designer</a>, <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer, and <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer.</p>
         </div>
       </div>
       <div id="links">
