Fix resume link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       <div id="links">
         <ul>
           <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
+          <li id="resume"><h4>Resume</h4> <a href="/resume.pdf">Download</a></li>
           <li id="elsewhere"><h4>Elsewhere</h4> <ul>
             <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
             <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
