--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body, div, h1, a, p {
+html, body, div, h1, a, p, dl, dd {
   margin: 0;
   padding: 0;
   border: 0;
@@ -7,192 +7,54 @@ html, body, div, h1, a, p {
   vertical-align: baseline;
 }
 
+@media only screen and (min-width: 881px) {
+  html {
+    background: url(bg.jpg);
+    background-size: cover;
+  }
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   background: #eee;
-  color: #444;
-  font: 20px/1 Karla, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  text-align: center;
-  padding: 100px 10px;
-  text-transform: lowercase;
+  color: #999;
+  font: 14px/1.5 Cousine, Menlo, Monaco, monospaced;
+  max-width: 800px;
+  padding: 40px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 1px;
+}
+
+a:hover {
+  border-color: #aaa;
+  color: #777;
 }
 
 h1 {
-  font-size: 54px;
+  color: #6da0f8;
+  font-family: Abel;
+  font-size: 4em;
+  font-weight: bold;
+  letter-spacing: 5px;
+  line-height: 1.2;
   margin-bottom: 5px;
+  text-transform: uppercase;
 }
 
-.location {
-  color: #999;
-  margin-bottom: 40px;
-}
-
-.main a {
-  border-radius: 5px;
-  color: #fff;
-  display: block;
-  margin: 0 auto 20px;
-  padding: 20px;
-  position: relative;
-  max-width: 400px;
-  -webkit-transition: all 0.5 ease-in-out;
-  -moz-transition: all 0.5 ease-in-out;
-  transition: all 0.5 ease-in-out;
-}
-
-.main a:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: all 0.5 ease-in-out;
-  -moz-transition: all 0.5 ease-in-out;
-  transition: all 0.5 ease-in-out;
-}
-
-.google {
-  -webkit-animation: left 1s;
-  -moz-animation: left 1s;
-  animation: left 1s;
-  background: #3c80f6;
-}
-
-.plusbible {
-  -webkit-animation: right 1.15s;
-  -moz-animation: right 1.15s;
-  animation: right 1.15s;
-  background: #e4b414;
-}
-
-.cmu {
-  -webkit-animation: left 1.25s;
-  -moz-animation: left 1.25s;
-  animation: left 1.25s;
-  background: #c4122f;
+p {
+  margin-bottom: 1em;
 }
 
 .contact {
-  margin-top: 40px;
+  margin-top: 2em;
 }
 
-.contact a {
-  border-bottom: 2px solid #ccc;
-  margin: 0 5px;
-  padding-bottom: 3px;
-}
-
-.contact a:hover {
-  border-color: #888;
-}
-
-@-webkit-keyframes right {
-  0% {
-    right: -75%;
-    opacity: 0;
-  }
-  50% {
-    right: -20%;
-    opacity: 0;
-  }
-  85% {
-    right: 20px;
-    opacity: 1;
-  }
-  100% {
-    right: 0;
-  }
-}
-
-@-webkit-keyframes left {
-  0% {
-    left: -75%;
-    opacity: 0;
-  }
-  50% {
-    left: -20%;
-    opacity: 0;
-  }
-  85% {
-    left: 20px;
-    opacity: 1;
-  }
-  100% {
-    left: 0;
-  }
-}
-
-@-moz-keyframes right {
-  0% {
-    right: -75%;
-    opacity: 0;
-  }
-  50% {
-    right: -20%;
-    opacity: 0;
-  }
-  85% {
-    right: 20px;
-    opacity: 1;
-  }
-  100% {
-    right: 0;
-  }
-}
-
-@-moz-keyframes left {
-  0% {
-    left: -75%;
-    opacity: 0;
-  }
-  50% {
-    left: -20%;
-    opacity: 0;
-  }
-  85% {
-    left: 20px;
-    opacity: 1;
-  }
-  100% {
-    left: 0;
-  }
-}
-
-@keyframes right {
-  0% {
-    right: -75%;
-    opacity: 0;
-  }
-  50% {
-    right: -20%;
-    opacity: 0;
-  }
-  85% {
-    right: 20px;
-    opacity: 1;
-  }
-  100% {
-    right: 0;
-  }
-}
-
-@keyframes left {
-  0% {
-    left: -75%;
-    opacity: 0;
-  }
-  50% {
-    left: -20%;
-    opacity: 0;
-  }
-  85% {
-    left: 20px;
-    opacity: 1;
-  }
-  100% {
-    left: 0;
-  }
+.dark {
+  color: #222;
+  margin: 2em 0;
 }
